--- a/game-tracker/index.html
+++ b/game-tracker/index.html
@@ -69,7 +69,29 @@
       </datalist>
 
       <article id="jogos-lista"></article>
+
+      <button>Carregar Mais</button>
     </main>
+
+    <footer>
+      <img src="assets/logo-icone.svg" alt="Icone Game Tracker" />
+      <p>
+        © 2021, Game Tracker Inc. Todos os direitos reservados. Nulla facilisi.
+        Etiam sagittis congue tempor. Pellentesque habitant morbi tristique
+        senectus et netus et malesuada fames ac turpis egestas. Suspendisse eu
+        velit et ante luctus egestas. Aenean sed nisi tellus. Duis non ornare
+        libero. Quisque suscipit maximus nisi, in gravida felis. Cras ornare
+        mauris ac nisi congue, ut condimentum sem tincidunt. Phasellus semper
+        tellus malesuada turpis gravida cursus. Duis nec eleifend nunc, vitae
+        finibus elit. Aliquam eget diam vitae purus suscipit viverra.
+      </p>
+      <div>
+        <a href="#">Termos de Serviço</a>
+        <a href="#">Política de Privacidade</a>
+        <a href="#">Trabalhe Conosco</a>
+        <a href="#">Contato</a>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
