--- a/game-tracker/index.html
+++ b/game-tracker/index.html
@@ -36,7 +36,7 @@
     </noscript>
   </head>
   <body>
-    <header>
+    <header id="header">
       <img src="assets/logo-horizontal.svg" alt="Logo Game Tracker" />
     </header>
 
@@ -73,7 +73,7 @@
       <button>Carregar Mais</button>
     </main>
 
-    <footer>
+    <footer id="footer">
       <img src="assets/logo-icone.svg" alt="Icone Game Tracker" />
       <p>
         © 2021, Game Tracker Inc. Todos os direitos reservados. Nulla facilisi.
@@ -85,7 +85,7 @@
         tellus malesuada turpis gravida cursus. Duis nec eleifend nunc, vitae
         finibus elit. Aliquam eget diam vitae purus suscipit viverra.
       </p>
-      <div>
+      <div class="about-links">
         <a href="#">Termos de Serviço</a>
         <a href="#">Política de Privacidade</a>
         <a href="#">Trabalhe Conosco</a>
