--- a/game-tracker/index.html
+++ b/game-tracker/index.html
@@ -54,7 +54,7 @@
         </label>
 
         <div class="flex-ordenar">
-          <label for="ordenar">Ordenar por</label>
+          <label for="ordenar">Ordenar por:</label>
           <input
             list="ordenar-lista"
             id="ordenar"
